# co2-mqtt

./: Cargo.toml  README.md
docs/: telegraf-co2.toml
src/: main.rs
