[package]
name = "co2-mqtt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
libc = "0.2"
log = "0.4"
pretty_env_logger = "0.4"
rumqttc = { version = "0.17", features = ["url", "rustls-native-certs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["serde", "serde-well-known"] }
